fixed alignment and cleaned up css

--- a/src/main/webapp/styles/contact.css
+++ b/src/main/webapp/styles/contact.css
@@ -13,22 +13,25 @@
     letter-spacing:2px;
 }
 
-#mail-text
+#mailText
 {
-    width:480px;
-    height:848px;
     text-align:left;
-    float:right;
     line-height: 1.5;
+    float:right;
+    justify-content:center;
 }
 
-#mail-image
+#mailImage
 {
-    content:url('../images/about/imageContact.png');
-    width:480px;
-    height:848px;
     border:2px solid #96D6F1;
     border-radius:8px;
+}
+
+#mailText,#mailImage,#mailBody
+{
+    width:480px;
+    height:848px;
+    display:inline-block;
 }
 
 #content
@@ -37,4 +40,11 @@
     display:inline-block;
     vertical-align: middle;
     margin: 60px 15px 0px;
+}
+
+#mailBody
+{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
 }
